# gov-service

./: .project  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build.yml  upload-to-pypi.yml
docs/: gov-tag.html
govservice/: govservice.py  govservice_cmd.py  version.py
govservice/config/: endpoints.yaml  gov_queries.yaml  prefixes.yaml
scripts/: blackisort  doc  gov_query  install  release  startup  test
tests/: test_gov_service.py
